# memory-aware-ros2-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.xml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  reproducible-build.yml  sbom.yml  smoke.yml
benchmarks/: performance_snapshot.json
docs/: api_reference.md  architecture.md  contributor_onboarding.md  developer_quickstart.md  faq.md  index.md  models.md  operations.md  persistence.md  phase3_summary.md  phase4_summary.md  phase5_summary.md  phase6_summary.md  phase7_summary.md  phase8_summary.md  production_readiness_checklist.md  recall_engine.md  release_checklist.md  release_notes_v1.0.0.md  repository_topics.md  ros2_usage.md  trace_intelligence.md  troubleshooting.md
docs/assets/: README.md
docs/benchmark_outputs/: benchmark_cli_sample.json  benchmark_cli_sample.md
examples/: basic_memory_recorder.py  cnc_tending_example.py  failure_recovery_example.py  navigation_example.py  pick_and_place_example.py  task_replay_demo.py  trace_intelligence_demo.py
examples/datasets/: README.md  sample_memory_events.json  sample_recall_queries.json  sample_task_traces.json
examples/payloads/: memory_event.json  task_trace.json
launch/: memory_lifecycle.launch.py  memory_pipeline.launch.py
notebooks/: trace_intelligence_walkthrough.md
scripts/: soak_trace_memory.py
src/memory_aware_ros2_agent/: __init__.py  backend_registry.py  backup.py  cli.py  corruption.py  event_log_store.py  factories.py  id_utils.py  in_memory_store.py  json_file_store.py  lifecycle_node.py  load_fixtures.py  memory_recorder_node.py  metadata_utils.py  migrations.py  models.py  performance_benchmarks.py  persistence.py  persistence_api.py  persistence_config.py  persistence_errors.py  pruning.py  recall_benchmarks.py  recall_engine.py  recall_metrics.py  recall_reports.py  recall_service_node.py  recall_visualizations.py  release_validation.py  restore.py  retention.py  ros_callback_groups.py  ros_compat.py  ros_config.py  ros_diagnostics.py  ros_executor.py  ros_logging.py  ros_qos.py  ros_topics.py  ros_validation.py  (+12 more)
tests/: conftest.py  test_analyzer_benchmark_dataset.py  test_anomaly_detection.py  test_anomaly_detection_behaviour.py  test_backend_compatibility.py  test_backend_registry.py  test_backup.py  test_backward_compatibility.py  test_benchmark_cli.py  test_benchmark_snapshots.py  test_bottleneck_identification.py  test_composite_scoring.py  test_concurrency_persistence_recall.py  test_corruption.py  test_dead_links.py  test_deserialization.py  test_documentation_validation.py  test_evaluation_reports.py  test_event_log_store.py  test_event_metadata.py  test_event_persistence_api.py  test_event_sequence_extraction.py  test_event_type.py  test_event_type_filtering.py  test_exact_match_recall.py  test_execution_statistics.py  test_executor_behaviour.py  test_experience_summarization.py  test_failure_pattern_analysis.py  test_filtering_behaviour.py  test_frequency_scoring.py  test_id_utils.py  test_import.py  test_in_memory_store.py  test_json_file_store.py  test_launch_descriptions.py  test_launch_examples.py  test_lifecycle_node.py  test_lifecycle_transitions.py  test_load_testing_fixtures.py  (+89 more)
