[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-aware-ros2-agent"
version = "0.1.0"
description = "ROS2 package foundation for memory events, task traces, and recall in robot workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Aditya Bhatia" }
]
keywords = ["ros2", "robotics", "memory", "agents", "task-traces"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pytest",
  "ruff",
]

[project.scripts]
memory-recorder = "memory_aware_ros2_agent.memory_recorder_node:main"
recall-service = "memory_aware_ros2_agent.recall_service_node:main"
trace-publisher = "memory_aware_ros2_agent.trace_publisher_node:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["memory_aware_ros2_agent"]
